--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,176 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ 
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.sideBar {
+  width: 282px;
+  height: 945px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #D9D9D9;
+  margin: 20px 0px 12px 10px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+.mainContainer {
+  height: 90vh;
+  width: 700px;
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  width: 1000px;
+  height: 72px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #D9D9D9;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.assignmentContainer {
+  width: 1000px;
+  height: 857px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #D9D9D9;
+  padding-left: 23px;
+}
+
+.assignmentContainer p {
+  color: rgba(0, 0, 0, 0.90);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-top: 18px;
+
+}
+
+.borderLine {
+  width: 950px;
+  height: 2px;
+  background: #B9B9B9;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.questionsConatiner {
+  height: 400px;
+}
+
+.headingContainer {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.headingContainer p {
+  color: rgba(0, 0, 0, 0.90);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.headingContainer button {
+  width: 128px;
+  height: 38px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #000;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.questionsTag{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: 20px;
+}
+.questionsTag p {
+  color: rgba(0, 0, 0, 0.90);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.questionsTag button {
+  width: 67px;
+  height: 26px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #000;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.question p{
+  color: rgba(0, 0, 0, 0.90);
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+.buttonContainer{
+  height: 100px;
+  width: 500px;
+  display: flex;
+  gap: 29px;
+  margin-top: 25px;
+}
+.buttonContainer :nth-child(1){
+  width: 100px;
+height: 57px;
+flex-shrink: 0;
+border-radius: 5px;
+border: 3px solid #000;
+color: #000;
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+cursor: pointer;
+}
+.buttonContainer :nth-child(2),
+.buttonContainer :nth-child(3){
+  border-radius: 5px;
+background: #000;
+color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+width: 146.11px;
+height: 57px;
+flex-shrink: 0;
+cursor: pointer;
 }
